Drawer module fixes
Fixed closing drawer caused by cliking inside it - other minor fixes

--- a/src/locales/en.default.json
+++ b/src/locales/en.default.json
@@ -250,6 +250,9 @@
     }
   },
   "layout": {
+    "drawers": {
+      "browse": "Browse"
+    },
     "cart": {
       "title": "Cart",
       "items_count": {
